--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ __marimo__/
 # Custom
 related_resource_dandi_page.png
 src/dandiannotations/external_resources
+src/dandiannotations/submissions
