--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,12 @@ classifiers = [
 
 dependencies = [
     "flask>=2.3.0,<3.0.0",
+    "flask-session>=0.5.0",
     "pyyaml>=6.0.0",
     "dandischema>=0.10.0",
     "pydantic>=2.0.0",
     "werkzeug>=2.3.0,<3.0.0",
+    "bcrypt>=4.0.0",
 ]
 
 [project.optional-dependencies]
