--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ __marimo__/
 related_resource_dandi_page.png
 src/dandiannotations/external_resources
 src/dandiannotations/submissions
+flask_session
