--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,9 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# MacOS
+.DS_Store
+
 # Custom
 related_resource_dandi_page.png
 src/dandiannotations/external_resources
