First pass at Rest API

--- a/src/dandiannotations/webapp/config/users.yaml
+++ b/src/dandiannotations/webapp/config/users.yaml
@@ -3,3 +3,7 @@ users:
     password_hash: $2b$12$AO9HlprW661cZyG8WeiTdu4xhkQ5US/loc32SULQZPPil3kElQSdG
     name: paul.wesley.adkisson
     registration_date: '2025-08-04T12:32:37.548972'
+  newuser@example.com:
+    password_hash: $2b$12$NycLu.n9og.a5jUH51DThO2Wm95cgTBOuXd8vU6XCMTpyH8uzhite
+    name: newuser
+    registration_date: '2025-08-04T14:50:50.901882'
