--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ related_resource_dandi_page.png
 src/dandiannotations/external_resources
 src/dandiannotations/submissions
 flask_session/
+progress.md
